extensions/jwt_header/testdata/istio/bookinfo/reviews-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reviews-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: reviews
#spec:
#  hosts:
#  - "reviews.local"
#  - "reviews.v150b4.qualistio.org"
#  gateways:
#  - reviews-gateway
#  http:
#  - route:
#    - destination:
#        host: reviews
#        port:
#          number: 9080
