extensions/jwt_header/testdata/istio/bookinfo/vs-reviews.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - "reviews.local"
  - "reviews.v150b4.qualistio.org"
  - "reviews"
  gateways:
  - reviews-gateway
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    match:
    - headers:
        jwt-group:
          exact: canary
  - route:
    - destination:
        host: reviews
        subset: v3
    match:
    - headers:
        jwt-group:
          exact: dev
  - route:
    - destination:
        host: reviews
        subset: v1
